added FYBC1 pdf

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 	│   &nbsp;&nbsp;&nbsp; │   └── <a href="./dir/presentations/dev/F21_FOSS_Presentation.pdf">F21_FOSS_Presentation.pdf</a><br>
 	│   &nbsp;&nbsp;&nbsp; ├── <a href="./dir/presentations/easy-masm/">easy-masm</a><br>
 	│   &nbsp;&nbsp;&nbsp; │   └── <a href="./dir/presentations/easy-masm/F21_Easy_Masm_Presentation.pdf">F21_Easy_Masm_Presentation.pdf</a><br>
+	│   &nbsp;&nbsp;&nbsp; ├── <a href="./dir/presentations/first-year-bootcamp/">first-year-bootcamp</a><br>
+	│   &nbsp;&nbsp;&nbsp; │   └── <a href="./dir/presentations/first-year-bootcamp/F21_Bootcamp_1_Setting_up_VSCode.pdf">F21_Bootcamp_1_Setting_up_VSCode.pdf</a><br>
 	│   &nbsp;&nbsp;&nbsp; └── <a href="./dir/presentations/vgdc/">vgdc</a><br>
 	│   &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; └── <a href="./dir/presentations/vgdc/F21_VGDC_Welcome_Week.pdf">F21_VGDC_Welcome_Week.pdf</a><br>
 	├── <a href="./index.html">index.html</a><br>
@@ -57,7 +59,7 @@
 	</p>
 	<p>
 
-11 directories, 13 files
+12 directories, 14 files
 	<br><br>
 	</p>
 	<hr>
