--- a/index.html
+++ b/index.html
@@ -34,8 +34,34 @@
 	│   ├── <a href="./dir/documents/">documents</a><br>
 	│   │   └── <a href="./dir/documents/CSS_Open_Data_Proposal.pdf">CSS_Open_Data_Proposal.pdf</a><br>
 	│   ├── <a href="./dir/images/">images</a><br>
+	│   │   ├── <a href="./dir/images/buildings/">buildings</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/AC.png">AC.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/BB.png">BB.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/CEI.png">CEI.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/CE.png">CE.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/CH.png">CH.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/CN.png">CN.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/CS.png">CS.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/DB.png">DB.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/DH.png">DH.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/ED.png">ED.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/EH.png">EH.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/ER.png">ER.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/JC.png">JC.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/LB.png">LB.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/LL.png">LL.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/LT.png">LT.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/MB.png">MB.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/MC.png">MC.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/MH.png">MH.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/MU.png">MU.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/OB.png">OB.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/TC.png">TC.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/UC.png">UC.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/VH.png">VH.png</a><br>
+	│   │   │   ├── <a href="./dir/images/buildings/WC.png">WC.png</a><br>
+	│   │   │   └── <a href="./dir/images/buildings/WL.png">WL.png</a><br>
 	│   │   └── <a href="./dir/images/F21_CSS_Hierarchy.svg">F21_CSS_Hierarchy.svg</a><br>
-	│   ├── <a href="./dir/misc/">misc</a><br>
 	│   └── <a href="./dir/presentations/">presentations</a><br>
 	│   &nbsp;&nbsp;&nbsp; ├── <a href="./dir/presentations/about-css/">about-css</a><br>
 	│   &nbsp;&nbsp;&nbsp; │   ├── <a href="./dir/presentations/about-css/F21_About_CSS_Presentation.pdf">F21_About_CSS_Presentation.pdf</a><br>
@@ -59,7 +85,7 @@
 	</p>
 	<p>
 
-12 directories, 14 files
+12 directories, 40 files
 	<br><br>
 	</p>
 	<hr>
