--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	│   │   │   ├── <a href="./dir/images/buildings/WC.png">WC.png</a><br>
 	│   │   │   └── <a href="./dir/images/buildings/WL.png">WL.png</a><br>
 	│   │   └── <a href="./dir/images/F21_CSS_Hierarchy.svg">F21_CSS_Hierarchy.svg</a><br>
+	│   ├── <a href="./dir/misc/">misc</a><br>
 	│   └── <a href="./dir/presentations/">presentations</a><br>
 	│   &nbsp;&nbsp;&nbsp; ├── <a href="./dir/presentations/about-css/">about-css</a><br>
 	│   &nbsp;&nbsp;&nbsp; │   ├── <a href="./dir/presentations/about-css/F21_About_CSS_Presentation.pdf">F21_About_CSS_Presentation.pdf</a><br>
@@ -77,6 +78,10 @@
 	│   &nbsp;&nbsp;&nbsp; │   └── <a href="./dir/presentations/easy-masm/F21_Easy_Masm_Presentation.pdf">F21_Easy_Masm_Presentation.pdf</a><br>
 	│   &nbsp;&nbsp;&nbsp; ├── <a href="./dir/presentations/first-year-bootcamp/">first-year-bootcamp</a><br>
 	│   &nbsp;&nbsp;&nbsp; │   └── <a href="./dir/presentations/first-year-bootcamp/F21_Bootcamp_1_Setting_up_VSCode.pdf">F21_Bootcamp_1_Setting_up_VSCode.pdf</a><br>
+	│   &nbsp;&nbsp;&nbsp; ├── <a href="./dir/presentations/hash-code/">hash-code</a><br>
+	│   &nbsp;&nbsp;&nbsp; │   └── <a href="./dir/presentations/hash-code/W22_CSS_Hash_Code_Presentation.pdf">W22_CSS_Hash_Code_Presentation.pdf</a><br>
+	│   &nbsp;&nbsp;&nbsp; ├── <a href="./dir/presentations/misc/">misc</a><br>
+	│   &nbsp;&nbsp;&nbsp; │   └── <a href="./dir/presentations/misc/Intro_to_Advent_of_Code_Workshop.pdf">Intro_to_Advent_of_Code_Workshop.pdf</a><br>
 	│   &nbsp;&nbsp;&nbsp; └── <a href="./dir/presentations/vgdc/">vgdc</a><br>
 	│   &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; └── <a href="./dir/presentations/vgdc/F21_VGDC_Welcome_Week.pdf">F21_VGDC_Welcome_Week.pdf</a><br>
 	├── <a href="./index.html">index.html</a><br>
@@ -85,7 +90,7 @@
 	</p>
 	<p>
 
-12 directories, 40 files
+15 directories, 42 files
 	<br><br>
 	</p>
 	<hr>
