--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 	│   │   └── <a href="./dir/images/F21_CSS_Hierarchy.svg">F21_CSS_Hierarchy.svg</a><br>
 	│   ├── <a href="./dir/misc/">misc</a><br>
 	│   ├── <a href="./dir/newsletter/">newsletter</a><br>
-	│   │   └── <a href="./dir/newsletter/2022-02-CSS-Newsletter.pdf">2022-02-CSS-Newsletter.pdf</a><br>
+	│   │   ├── <a href="./dir/newsletter/2022-02-CSS-Newsletter.pdf">2022-02-CSS-Newsletter.pdf</a><br>
+	│   │   └── <a href="./dir/newsletter/2022-03-Newsletter.pdf">2022-03-Newsletter.pdf</a><br>
 	│   └── <a href="./dir/presentations/">presentations</a><br>
 	│   &nbsp;&nbsp;&nbsp; ├── <a href="./dir/presentations/about-css/">about-css</a><br>
 	│   &nbsp;&nbsp;&nbsp; │   ├── <a href="./dir/presentations/about-css/F21_About_CSS_Presentation.pdf">F21_About_CSS_Presentation.pdf</a><br>
@@ -97,7 +98,7 @@
 	</p>
 	<p>
 
-18 directories, 46 files
+18 directories, 47 files
 	<br><br>
 	</p>
 	<hr>
