updated css newsletter

--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
 	│   │   │   ├── <a href="./dir/images/buildings/WC.png">WC.png</a><br>
 	│   │   │   └── <a href="./dir/images/buildings/WL.png">WL.png</a><br>
 	│   │   └── <a href="./dir/images/F21_CSS_Hierarchy.svg">F21_CSS_Hierarchy.svg</a><br>
-	│   ├── <a href="./dir/misc/">misc</a><br>
 	│   ├── <a href="./dir/newsletter/">newsletter</a><br>
 	│   │   ├── <a href="./dir/newsletter/2022-02-CSS-Newsletter.pdf">2022-02-CSS-Newsletter.pdf</a><br>
-	│   │   └── <a href="./dir/newsletter/2022-03-Newsletter.pdf">2022-03-Newsletter.pdf</a><br>
+	│   │   └── <a href="./dir/newsletter/2022-03-CSS-Newsletter.pdf">2022-03-CSS-Newsletter.pdf</a><br>
 	│   └── <a href="./dir/presentations/">presentations</a><br>
 	│   &nbsp;&nbsp;&nbsp; ├── <a href="./dir/presentations/about-css/">about-css</a><br>
 	│   &nbsp;&nbsp;&nbsp; │   ├── <a href="./dir/presentations/about-css/F21_About_CSS_Presentation.pdf">F21_About_CSS_Presentation.pdf</a><br>
@@ -98,7 +97,7 @@
 	</p>
 	<p>
 
-18 directories, 47 files
+17 directories, 47 files
 	<br><br>
 	</p>
 	<hr>
