--- a/dir/images/index.html
+++ b/dir/images/index.html
@@ -27,12 +27,12 @@
 </head>
 <body>
     <h2>View Directory Contents</h2>
-    <h1>.</h1>
+    <h1>./dir/images</h1>
     <ul>
-        <li class="dir"><b><a href="dir">📁 dir/</a></b></li>
+        <li class="dir"><b><a href="..">⬆ Parent</a></b></li></br>
+        <li class="dir"><b><a href="buildings">📁 buildings/</a></b></li>
         <br />
-        <li class="file"><a target="_blank" href="build.py">📄 build.py</a></li>
-        <li class="file"><a target="_blank" href="README.md">📄 README.md</a></li>
+        <li class="file"><a target="_blank" href="F21_CSS_Hierarchy.svg">📄 F21_CSS_Hierarchy.svg</a></li>
     </ul>
 </body>
 </html>
