--- a/dir/index.html
+++ b/dir/index.html
@@ -27,12 +27,15 @@
 </head>
 <body>
     <h2>View Directory Contents</h2>
-    <h1>.</h1>
+    <h1>./dir</h1>
     <ul>
-        <li class="dir"><b><a href="dir">📁 dir/</a></b></li>
+        <li class="dir"><b><a href="..">⬆ Parent</a></b></li></br>
+        <li class="dir"><b><a href="documents">📁 documents/</a></b></li>
+        <li class="dir"><b><a href="images">📁 images/</a></b></li>
+        <li class="dir"><b><a href="misc">📁 misc/</a></b></li>
+        <li class="dir"><b><a href="newsletter">📁 newsletter/</a></b></li>
+        <li class="dir"><b><a href="presentations">📁 presentations/</a></b></li>
         <br />
-        <li class="file"><a target="_blank" href="build.py">📄 build.py</a></li>
-        <li class="file"><a target="_blank" href="README.md">📄 README.md</a></li>
     </ul>
 </body>
 </html>
