--- a/dir/presentations/about-css/index.html
+++ b/dir/presentations/about-css/index.html
@@ -27,12 +27,12 @@
 </head>
 <body>
     <h2>View Directory Contents</h2>
-    <h1>.</h1>
+    <h1>./dir/presentations/about-css</h1>
     <ul>
-        <li class="dir"><b><a href="dir">📁 dir/</a></b></li>
+        <li class="dir"><b><a href="..">⬆ Parent</a></b></li></br>
         <br />
-        <li class="file"><a target="_blank" href="build.py">📄 build.py</a></li>
-        <li class="file"><a target="_blank" href="README.md">📄 README.md</a></li>
+        <li class="file"><a target="_blank" href="F21_About_CSS_Presentation.pdf">📄 F21_About_CSS_Presentation.pdf</a></li>
+        <li class="file"><a target="_blank" href="F21_CSS_Presentation_For_Orientation.pdf">📄 F21_CSS_Presentation_For_Orientation.pdf</a></li>
     </ul>
 </body>
 </html>
