--- a/dir/presentations/winhacks/index.html
+++ b/dir/presentations/winhacks/index.html
@@ -27,12 +27,11 @@
 </head>
 <body>
     <h2>View Directory Contents</h2>
-    <h1>.</h1>
+    <h1>./dir/presentations/winhacks</h1>
     <ul>
-        <li class="dir"><b><a href="dir">📁 dir/</a></b></li>
+        <li class="dir"><b><a href="..">⬆ Parent</a></b></li></br>
+        <li class="dir"><b><a href="2022">📁 2022/</a></b></li>
         <br />
-        <li class="file"><a target="_blank" href="build.py">📄 build.py</a></li>
-        <li class="file"><a target="_blank" href="README.md">📄 README.md</a></li>
     </ul>
 </body>
 </html>
